placing customer orders

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/smchow/bamazon#readme",
   "dependencies": {
+    "inquirer": "^3.0.1",
     "mysql": "^2.13.0"
   }
 }
